--- a/index.adoc
+++ b/index.adoc
@@ -5,6 +5,8 @@ explore how Solo.io Ambient enables secure service-to-service communication in a
 
 image:assets/overview.png[]
 
+Watch the Ambient multi-cluster demo on Youtube!
+
 ifdef::env-github[]
 image::https://img.youtube.com/vi/18dpBukOYSk/maxresdefault.jpg[link=https://youtu.be/18dpBukOYSk]
 endif::[]
@@ -13,32 +15,4 @@ ifndef::env-github[]
 video::18dpBukOYSk[youtube]
 endif::[]
 
-== Preparing Your Environment
-
-Create two clusters and set the environment variables to their context.  You will also need a Gloo Mesh license key. The value below are merely placeholders.  Update them with the correct values for your environment.
-
-This is an important step as the rest of the workshop relies on these environment variables being set.
-
-[source,bash]
-----
-export CLUSTER1=gke_ambient_one 
-export CLUSTER2=gke_ambient_two
-export GLOO_MESH_LICENSE_KEY=<your license key>
-----
-
-Next, download Solo's 1.25.3 `istioctl` binary.
-
-[source,bash]
-----
-OS=$(uname | tr '[:upper:]' '[:lower:]' | sed -E 's/darwin/osx/')
-ARCH=$(uname -m | sed -E 's/aarch/arm/; s/x86_64/amd64/; s/armv7l/armv7/')
-
-mkdir -p ~/.istioctl/bin
-curl -sSL https://storage.googleapis.com/istio-binaries-e038d180f90a/1.25.3-solo/istioctl-1.25.3-solo-${OS}-${ARCH}.tar.gz | tar xzf - -C ~/.istioctl/bin
-chmod +x ~/.istioctl/bin/istioctl
-
-export PATH=${HOME}/.istioctl/bin:${PATH}
-----
-
-Verify that you have the correct `istioctl` in your path by executing `istioctl version`.
-
+include::modules/env-prep.adoc[]
