Move code into scripts

--- a/modules/env-prep.adoc
+++ b/modules/env-prep.adoc
@@ -16,14 +16,7 @@ Next, download Solo's 1.25.3 `istioctl` binary.
 
 [source,bash]
 ----
-OS=$(uname | tr '[:upper:]' '[:lower:]' | sed -E 's/darwin/osx/')
-ARCH=$(uname -m | sed -E 's/aarch/arm/; s/x86_64/amd64/; s/armv7l/armv7/')
-
-mkdir -p ~/.istioctl/bin
-curl -sSL https://storage.googleapis.com/istio-binaries-e038d180f90a/1.25.3-solo/istioctl-1.25.3-solo-${OS}-${ARCH}.tar.gz | tar xzf - -C ~/.istioctl/bin
-chmod +x ~/.istioctl/bin/istioctl
-
-export PATH=${HOME}/.istioctl/bin:${PATH}
+include::../steps/env-prep/01.sh[]
 ----
 
 Verify that you have the correct `istioctl` in your path by executing `istioctl version`.
