--- a/modules/env-prep/env-prep.adoc
+++ b/modules/env-prep/env-prep.adoc
@@ -16,7 +16,7 @@ Next, download Solo's 1.25.3 `istioctl` binary.
 
 [,console]
 ----
-include::../steps/env-prep/01.sh[]
+include::scripts/01.sh[]
 ----
 
 Verify that you have the correct `istioctl` in your path by executing `istioctl version`.
