Add ambient failover module

--- a/index.adoc
+++ b/index.adoc
@@ -24,3 +24,5 @@ include::modules/deploy-bookinfo/deploy-bookinfo.adoc[]
 include::modules/install-istio/install-istio.adoc[]
 
 include::modules/expose-productpage/expose-productpage.adoc[]
+
+include::modules/ambient-failover/ambient-failover.adoc[]
