--- a/index.adoc
+++ b/index.adoc
@@ -26,3 +26,5 @@ include::modules/install-istio/install-istio.adoc[]
 include::modules/expose-productpage/expose-productpage.adoc[]
 
 include::modules/ambient-failover/ambient-failover.adoc[]
+
+include::modules/add-waypoints-for-l7/add-waypoints-for-l7.adoc[]
