fix image links

--- a/index.adoc
+++ b/index.adoc
@@ -5,7 +5,7 @@
 In this workshop, you will set up Istio Ambient in a multi-cluster environment, deploy a sample Bookinfo app, and 
 explore how Solo.io Ambient enables secure service-to-service communication in all directions.
 
-image:assets/overview.png[]
+image::assets/overview.png[]
 
 Watch the Ambient multi-cluster demo on Youtube!
 
